parse the response as json

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1 class="color1">This is a title associated with some color</h1>
 <button id="ajaxButton">Click me!</button>
+<div id="content"></div>
 <script src="main.js"></script>
