--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-<h1 class="color1">This is a title associated with some color</h1>
-<button id="ajaxButton">Click me!</button>
-<div id="content"></div>
-<script src="main.js"></script>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Your Name Under the Weather</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="main.css">
+
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+	<div class="container">
+		<h1 class="color1">This is a title associated with some color</h1>
+		<div id="content"></div>
+	</div>
+
+        <script src="main.js"></script>
+
+    </body>
+</html>
+
