--- a/index.html
+++ b/index.html
@@ -17,8 +17,26 @@
         <![endif]-->
 
 	<div class="container">
-		<h1 class="color1">This is a title associated with some color</h1>
-		<div id="content"></div>
+		<div class="header clearfix">
+			<h3 class="text-muted">Your Name, Under the Weather</h3>
+		</div>
+		      <div class="jumbotron">
+        <h1 id="your-name" class="display-3">Jumbotron heading</h1>
+        <p class="lead">This box will change its background image based on the weather. You can type your name into the box and its color will change depending on a combination of the humidity, temprature, and dewpoint. If you want, you can also get the location you like and see the app as if it were in that location.</p>
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="input-group">
+				<input type="text" id="name-field" class="form-control" placeholder="Add your name" aria-label="">
+				<span class="input-group-btn">
+					<button id="submit-name-btn" class="btn btn-secondary" type="button">Go!</button>
+				</span>
+			</div>
+		</div>
+	</div>
+
+	</div>
+	<h2 class="color1">The conditions at Cognizant HQ are: </h1>
+	<div id="content"></div>
 	</div>
 
         <script src="main.js"></script>
