--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
         <link rel="stylesheet" href="main.css">
 
     </head>
-    <body>
+    <body class="wx">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
 	<div class="container">
-		<div class="header clearfix">
+		<div class="wx header clearfix">
 			<h3 class="text-muted">Your Name, Under the Weather</h3>
 		</div>
-		      <div class="jumbotron">
+		      <div id="jumbotron" class="jumbotron">
+			      <div class="shade"></div>
         <h1 id="your-name" class="display-3">Jumbotron heading</h1>
         <p class="lead">This box will change its background image based on the weather. You can type your name into the box and its color will change depending on a combination of the humidity, temprature, and dewpoint. If you want, you can also get the location you like and see the app as if it were in that location.</p>
 	<div class="row">
@@ -35,8 +36,8 @@
 	</div>
 
 	</div>
-	<h2 class="color1">The conditions at Cognizant HQ are: </h1>
-	<div id="content"></div>
+	<h2 class="wx">The conditions at Cognizant HQ are: </h1>
+	<div class="wx" id="content"></div>
 	</div>
 
         <script src="main.js"></script>
