--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>Your Name Under the Weather</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
 
     </head>
     <body class="wx">
@@ -55,8 +55,7 @@
 	<a href="https://darksky.net/poweredby/">Powered by Dark Sky</a>
 	</div>
 
-        <script src="main.js"></script>
+        <script src="js/main.js"></script>
 
     </body>
 </html>
-
